Fix link contrast in `FigureSplashShape` in `carnival` (#604)

--- a/styles/output/hs-physics-pdf.css
+++ b/styles/output/hs-physics-pdf.css
@@ -1454,6 +1454,10 @@ nav#toc > ol > .os-toc-composite-chapter > a::after {
   padding-right: 8px;
 }
 
+.os-figure.has-splash .os-caption-container a {
+  color: #026591;
+}
+
 .os-figure.has-splash .os-caption-container::before {
   content: '';
   background-color: #EEEAE0;
