--- a/styles/output/nursing-external-pdf.css
+++ b/styles/output/nursing-external-pdf.css
@@ -1409,6 +1409,10 @@ div[data-type=composite-page].os-eob {
   padding-right: 8px;
 }
 
+.os-figure.has-splash .os-caption-container a {
+  color: #026591;
+}
+
 .os-figure.has-splash .os-caption-container::before {
   content: '';
   background-color: #EEEAE0;
