--- a/styles/output/organic-chemistry-pdf.css
+++ b/styles/output/organic-chemistry-pdf.css
@@ -2795,6 +2795,10 @@ div a:not(.autogenerated-content):not(.figure-target-label):not(.table-target-la
   padding-right: 8px;
 }
 
+.os-figure.has-splash .os-caption-container a {
+  color: #026591;
+}
+
 .os-figure.has-splash .os-caption-container::before {
   content: '';
   background-color: #EEEAE0;
